@@ -65,7 +65,7 @@ define( function( require ) {
    * @param {GameModel} model
    * @constructor
    */
-  function LevelSelectionNode( model, layoutBounds ) {
+  function LevelSelectionNode( model, viewProperties, layoutBounds ) {
 
     Node.call( this );
 
@@ -92,14 +92,17 @@ define( function( require ) {
 
     // Timer and Sound controls, lower left
     var toggleOptions = { stroke: 'black', cornerRadius: 10 };
-    var soundToggleButton = new SoundToggleButton( model.soundEnabledProperty, _.extend( toggleOptions, {x: BUTTON_MARGIN, bottom: layoutBounds.bottom - BUTTON_MARGIN} ) );
+    var soundToggleButton = new SoundToggleButton( viewProperties.soundEnabledProperty, _.extend( toggleOptions, {x: BUTTON_MARGIN, bottom: layoutBounds.bottom - BUTTON_MARGIN} ) );
     this.addChild( soundToggleButton );
     var timerToggleButton = new TimerToggleButton( model.timerEnabledProperty, _.extend( toggleOptions, {x: BUTTON_MARGIN, bottom: soundToggleButton.top - BUTTON_MARGIN / 2} ) );
     this.addChild( timerToggleButton );
 
     // Reset All button, lower right
     var resetButton = new ResetAllButton( {
-      listener: function() { model.reset(); },
+      listener: function() {
+        model.reset();
+        viewProperties.reset();
+      },
       right: layoutBounds.right - BUTTON_MARGIN,
       bottom: layoutBounds.bottom - BUTTON_MARGIN
     } );
