@@ -34,9 +34,7 @@ define( function( require ) {
 
     PropertySet.call( this, {
       currentEquation: this.equations[0],
-      balanceChoice: BalancedRepresentation.NONE,
-      leftBoxOpen: true,
-      rightBoxOpen: true
+      balanceChoice: BalancedRepresentation.NONE
     } );
   }
 
